style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    margin: 0 auto;
    padding: 0;
    overflow-x: hidden;
}

/**header**/
header {
    min-height: 30px;
    max-width: 90%;
    margin: 0 auto;
    padding: 0 10px 0 10px;
}

.header-container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    flex-wrap: wrap;
}

.logo {
    margin-right: auto;
}

.logo h2 {
    color: brown;
    font-size: 35px;
    font-family: 'Mukta', sans-serif;
    cursor: pointer;
}

.nav-links a {
    color: brown;
    text-decoration: none;
    display: inline-block;
    padding: .5em .5em;
}

.nav-links a:hover {
    color: darkgrey;
}

nav ul {
    padding: 0;
    text-align: center;
}

.nav-links li {
    display: inline;
    font-size: 20px;
}

.nav-links {
    list-style-type: none;
}

.shop-button button {
    font-size: 16px;
    color: white;
    font-weight: bolder;
    background-color: brown;
    border-radius: 50px;
    border: none;
    padding: 5px 20px 5px 20px;
    margin-left: 10px;
}

.shop-button button:hover {
    background-color: rgb(187, 100, 100);
}

/**Section - Slider**/

.image-slider-container {
    position: relative;
    min-height: 10vh;
    max-width: 90%;
    margin: 0 auto;
    padding: 40px;
}

.slider-content {
    position: absolute;
    width: 100%;
    top: 40%;
    left: 10%;
    color: white;
    padding: 20px;
}

.slide-title {
    font-size: 25px;
    font-weight: bolder;
}

.slide-paragraph {
    font-size: 20px;
    max-width: 300px;
}

.slide {
    width: 100%;
    vertical-align: middle;
}

.image-slider img {
    max-width: 100%;
    border-radius: 10px;
}

.slide-button {
    padding: 10px 30px 10px 30px;
    background-color: darkgrey;
    color: white;
    border-radius: 20px;
    font-weight: bolder;
}

.slide-button:hover {
    background-color: lightgrey;
}

/**Section - Tribute**/

.tribute {
    display: flex;
    justify-content: space-around;
    margin: 0;
    padding: 0;
    width: 100%;
    background: #fafafa;
}

.tribute-container {
    display: flex;
    justify-content: center;
    margin-bottom: 0px;
}

.tribute-item {
    padding: 20px;
    text-align: center;
    margin: 0px 70px;
}

.tribute-item p {
    margin-bottom: 0px;
    font-family: "Whitney A", "Whitney B", Helvetica, Arial, sans-serif;
    font-weight: 100;
}


.tribute-item img {
    background: transparent;
    width: 70px;
    height: 70px;
}

.mission-parallax {
    background-image: url('assets/images/mission-background.jpg');
    min-height: 500px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.mission-background {
    background-image: url('assets/images/mission-background.jpg');
    display: flex;
    align-items: center;
    justify-content: center;
    height: 535px;
    background-size: cover;
    background-position: center;
    margin-bottom: 50px;
}

.mission-content {
    margin: 0 40px;
    text-align: center;
}

.mission-title {
    display: flex;
    justify-content: center;
    margin: 0 5px;
    font-weight: 500;
    color: #fff;
    font-size: 60px;
    text-transform: uppercase;
    text-shadow: 2px 2px #000;
}

.mission-content p:nth-child(2) {
    color: #fff;
    font-size: 25px;
}

/**Features*/
.features {
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(2, minmax(150px, 450px));
    grid-gap: 50px;
    margin: 70px;
}

.features>article img {
    width: 100%;
    max-height: max-content;
    border: 0;
    border-radius: 5px;
}

/**Footer**/

footer {
    background-color: rgb(128, 128, 128);
    color: white;
    display: block;
    text-align: center;
    padding: 30px 0 0 0;
    display: block;
    font-size: 14px;
    font-family: 'Mukta', sans-serif;
}

footer ul {
    display: block;
    list-style-type: none;
}

.footer-top-links li {
    display: inline-block;
    margin: 50px 0 10px 0;
}

footer a {
    display: block;
    padding: 10px 5px 10px 5px;
    text-decoration: none;
    color: white;
    cursor: pointer;
}

.footer-email-input {
    display: inline-block;
    border-bottom: 1px solid white;
}

button[type=submit] {
    cursor: pointer;
    float: left;
    width: 30px;
    height: 25.2px;
    border: none;
    font-size: 20px;
    color: white;
    background-color: transparent;
}

input[type=email]::placeholder {
    color: white;
    font-weight: 400;
}

input[type=email] {
    width: 270px;
    display: block;
    float: left;
    padding: 5px 10px 5px 0;
    border: none;
    background-color: transparent;
}

.footer-social-links {
    font-size: 20px;
    margin-bottom: 50px;
}

.footer-social-links li {
    display: inline-block;
}

.footer-social-links a {
    display: block;
    cursor: pointer;
}

.footer-social-links li:nth-child(2) {
    margin: 0 10px 0 10px;
}

.footer-bottom-links li {
    display: inline-block;
}

.footer-bottom-links {
    background-color: rgb(107, 107, 107);
}

/**Carousel component*/
.glide {
    padding: 0 0 15vh 0;
    background-color: #EBE7EC;
  }
  
  .glide__track {
    overflow: visible;
    height: 60vh;
  }
  .glide__slide {
    transition: all 200ms ease;
    -webkit-transform-origin: 50% 50%;
            transform-origin: 50% 50%;
    -webkit-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
  }
  .glide__slide.active {
    -webkit-transform: scale(1.02);
            transform: scale(1.02);
  }
  .glide__slide.pre {
    -webkit-transform: perspective(50em) rotateY(15deg);
            transform: perspective(50em) rotateY(15deg);
  }
  .glide__slide.following {
    -webkit-transform: perspective(50em) rotateY(-15deg);
            transform: perspective(50em) rotateY(-15deg);
  }
  .glide--horizontal .glide__bullets {
    bottom: 25%;
  } 
  .glide__bullets {
      color: aqua;
  }
/**Media Queries*/
@media (max-width: 800px) {
    .tribute-container {
        flex-direction: column;
        justify-content: space-around;
    }

    .tribute-item {
        padding: 7px;
    }

    .tribute-item img {
        width: 40px;
        height: 40px;
    }

    .mission-background {
        background-image: url('assets/images/mission-background.jpg');
        min-height: 200px;
    }

    .mission-title {
        font-size: 40px;
        text-align: center;
    }

    .mission-content p:nth-child(2) {
        color: #fff;
        font-size: 15px;
    }

    /**media query for image slider start**/

    .image-slider-container {
        max-width: 100%;
        padding: 20px 10px 20px 10px;
        margin: 0 auto;
    }

    .slider-content {
        top: 50%;
        left: 10%;
        color: white;
        padding: 5px 0 10px 0;
    }

    .slide-title {
        font-size: 20px;
        font-weight: bolder;
    }

    .slide-paragraph {
        font-size: 16px;
        max-width: 300px;
    }

    .slide-button {
        padding: 2px 7px 2px 7px;
        background-color: darkgrey;
        color: white;
        border-radius: 20px;
        font-weight: bolder;
        font-size: 10px;
    }

    /**media query for image slider end**/
}

@media (max-width: 600px) {
    .header-container {
        display: block;
        text-align: center;
    }

    .shop-button button {
        display: none;
    }

    /**media query for image slider start**/

    .image-slider-container {
        max-width: 100%;
        padding: 20px 10px 20px 10px;
        margin: 0 auto;
    }

    .slider-content {
        top: 30%;
        left: 10%;
        color: white;
        padding: 5px 0 10px 0;
    }

    .slide-title {
        font-size: 14px;
        font-weight: bolder;
    }

    .slide-paragraph {
        font-size: 10px;
        max-width: 150px;
    }

    /**media query for image slider end**/
}

